--- a/docs/team/nishcafe.adoc
+++ b/docs/team/nishcafe.adoc
@@ -14,11 +14,17 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 part of a module - CS2103T Software Engineering. The module specifications were to morph a basic command line
 interface desktop addressbook application into an application that manages any type of data of our choosing. As such,
 we decided to create a student life organiser, that manages students' tasks, finances, courses and co-curricular
-activities (CCA). Through `Jarvis`, students can better organise the major aspects of their student life.
+activities (CCA). Students can better organise the major aspects of their student life through the
+`Task Planner`, `Finance Tracker`, `CCA Tracker` and `Course Planner` features of `Jarvis`.
 
-The Graphical User Interface of `Jarvis`
-.Jarvis' Graphical User Interface (GUI)
+.Jarvis' GUI
 image::startup-gui-dg.png[]
+
+{sp} +
+
+As seen from the image above, the Graphical User Interface (GUI) of `Jarvis` has four tabs, each
+dealing a different tool.
+
 
 ==== Summary of Contributions
 
